# dropit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  debian.Dockerfile  dropit.db  dropit.db-shm  dropit.db-wal  upload.sh
.github/workflows/: ci.yml  docker.yml
dropit/: Cargo.toml
dropit-cli/: Cargo.toml
dropit-cli/src/: client.rs  file.rs  main.rs  options.rs  upload_request.rs
dropit-client/: Cargo.toml
dropit-client/src/: client.rs  main.rs  options.rs  reporter.rs  upload_request.rs
dropit-server/: Cargo.toml
dropit-server/src/: error.rs  main.rs  options.rs  response.rs  theme.rs
dropit-server/src/alias/: group.rs  mod.rs  words.txt
dropit-server/src/info/: mod.rs
dropit-server/src/limit/: origin.rs
dropit-server/src/query/: delete_file.sql  extend_file.sql  get_file.sql  get_limit_origin.sql  mod.rs
dropit-server/src/storage/: dir.rs
dropit-server/src/update/alias/: both.rs
dropit-server/src/upload/: mod.rs
dropit/src/: main.rs  misc.rs
dropit/src/auth/: authenticator.rs  ldap.rs  mod.rs  protection.rs
dropit/src/download/: file.rs  mod.rs
dropit/src/info/: valid.rs
dropit/src/public/: app.js  style.css
dropit/src/query/: get_file_admin.sql  insert_file.sql  migration.sql
dropit/src/update/alias/: long.rs
dropit/src/upload/: filename.rs
src/: asset.rs  assets.rs  auth.rs  error.rs  main.rs  misc.rs  option.rs  options.rs  response.rs  theme.rs
src/alias/: group.rs  long.rs  mod.rs  short.rs
src/auth/: authenticator.rs  credential.rs  features.rs  ldap.rs  login.rs  mod.rs  origin.rs  protection.rs
src/download/: archive.rs  error.rs  file.rs  mod.rs  open_graph.rs  redirect.html
src/download/file/: mod.rs
src/info/: mod.rs  valid.rs
src/limit/: global.rs  ip.rs  mod.rs  origin.rs
src/public/: app.js  index.html  style.css
src/public/login/: app.js  index.html  style.css
src/query/: exist_alias_long.sql  exist_alias_short.sql  get_file_admin.sql  get_file_downloads.sql  get_file_long.sql  get_file_short.sql  get_files_expired.sql  get_limit_global.sql  insert_file.sql  migration.sql  mod.rs  update_file_aliases.sql  update_file_downloads.sql  update_file_long_alias.sql  update_file_short_alias.sql
src/storage/: clean.rs  dir.rs  mod.rs  notifier.rs
src/update/: alias.rs  downloads.rs  expiration.rs  mod.rs  revoke.rs
src/update/alias/: both.rs  long.rs  mod.rs  short.rs
src/upload/: error.rs  expiration.rs  file.rs  filename.rs  handler.rs  limit.rs  mod.rs  origin.rs  response.rs
