[package]
name = "dropit"
version = "0.14.1"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.9", features = ["io-util", "macros", "sync", "fs", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["stream"] }
routerify = "2.2"
futures = "0.3"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio-util = { version = "0.6", default-features = false, features = ["io", "compat"] }
lazy_static = "1.4"
rand = "0.8"
regex = "1.5"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byte-unit = { version = "4.0", default-features = false, features = ["std"] }
humantime = "2.1"
async-trait = "0.1"
thiserror = "1.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
async-tar = "0.3"
percent-encoding = "2.1"
sanitize-filename = "0.3"