[package]
name = "dropit"
version = "0.20.0-beta.1"
authors = ["Scotow <contact@scotow.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.13", features = ["io-util", "macros", "sync", "fs", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["stream"] }
routerify = "2.2"
futures = "0.3"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio-util = { version = "0.6", default-features = false, features = ["io", "compat"] }
lazy_static = "1.4"
rand = "0.8"
regex = "1.5"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byte-unit = { version = "4.0", default-features = false, features = ["std"] }
humantime = "2.1"
async-trait = "0.1"
thiserror = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
percent-encoding = "2.1"
sanitize-filename = "0.3"
base64 = "0.13"
bitflags = "1.3"
zipit = { version = "0.2.1", features = ["chrono-datetime"] }
ldap3 = { version = "0.9.3", default-features = false, features = ["tls-rustls"] }
rust-embed = "6.3.0"
