[package]
name = "dropit"
version = "0.22.4"
authors = ["Scotow <contact@scotow.com>"]
edition = "2021"
description = "Temporary file hosting and sharing"
license = "MIT"

[dependencies]
tokio = { version = "1.19.2", features = ["io-util", "macros", "sync", "fs", "rt-multi-thread"] }
hyper = { version = "0.14.19", features = ["stream"] }
axum = { version = "0.5.13", features = ["headers", "query"] }
futures = "0.3.21"
sqlx = { version = "0.5.13", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio-util = { version = "0.7.3", default-features = false, features = ["io", "compat"] }
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.6"
uuid = { version = "0.8.2", features = ["v4"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
byte-unit = { version = "4.0.14", default-features = false, features = ["std"] }
humantime = "2.1.0"
async-trait = "0.1.56"
thiserror = "1.0.31"
clap = { version = "3.1.18", features = ["derive", "wrap_help"] }
log = "0.4.17"
env_logger = "0.9.0"
percent-encoding = "2.1.0"
sanitize-filename = "0.4.0"
base64 = "0.13.0"
bitflags = "1.3.2"
zipit = { version = "0.2.1", features = ["chrono-datetime"] }
ldap3 = { version = "0.9.3", default-features = false, features = ["tls-rustls"] }
rust-embed = "6.3.0"
itertools = "0.10.3"
http-negotiator = { git = "https://github.com/scotow/http-negotiator", rev = "ea8aefd", features = ["axum"] }