[package]
name = "dropit-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["fs", "time", "sync"] }
tokio-util = { version = "0.7.4", features = ["io"] }
clap = { version = "4.0.22", features = ["derive", "env"] }
flume = "0.10.14"
reqwest = { version = "0.11.12", features = ["stream"] }
futures-core = "0.3.25"
bytes = "1.2.1"
indicatif = { version = "0.17.1", features = ["tokio"] }
itertools = "0.10.5"