[package]
name = "dropit-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
bytes = "1.2.1"
clap = { version = "4.0.22", features = ["derive", "env"] }
config = "0.13.2"
dirs = "4.0.0"
flume = "0.10.14"
futures = "0.3.25"
indicatif = { version = "0.17.1", features = ["tokio"] }
itertools = "0.10.5"
reqwest = { version = "0.11.12", features = ["stream"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["fs", "time", "sync"] }
tokio-util = { version = "0.7.4", features = ["io"] }